--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -49,15 +49,17 @@
                                 android:gravity="center"
                                 android:orientation="vertical">
 
-                                <androidx.appcompat.widget.AppCompatImageView
+                                <ImageView
                                     android:id="@+id/imgPro"
                                     android:layout_width="110dp"
                                     android:layout_height="110dp"
                                     android:clickable="true"
                                     android:src="@drawable/profile"
                                     android:focusable="true"
+                                    app:tint="@color/light_blue"
                                     android:padding="@dimen/_4sdp"
                                     android:layout_marginBottom="@dimen/_20sdp" />
+
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
