--- a/app/src/main/res/layout/activity_card_detail2.xml
+++ b/app/src/main/res/layout/activity_card_detail2.xml
@@ -259,6 +259,7 @@
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="22dp"
+                    android:backgroundTint="#4EB1E0"
                     android:contentDescription="Add Coupon"
                     android:fontFamily="@font/catamaran"
                     android:text="Payment"
@@ -267,8 +268,7 @@
                     android:textStyle="bold"
                     app:icon="@drawable/ic_baseline_add_24"
                     app:iconTint="@color/white"
-                    tools:ignore="RtlCompat"
-                    android:backgroundTint="#4EB1E0" />
+                    tools:ignore="RtlCompat" />
 
                 <View
                     android:layout_width="match_parent"
